# BaseVector-Core

./: .gitignore  API_DOCUMENTATION.md  README.md  pyproject.toml  requirements.txt
ability/: config.py
ability/operators/: __init__.py  base.py  decorators.py  plugin_registry.py
ability/operators/chunkers/: __init__.py  base_chunker.py  chunker_factory.py  fixed_chunker.py  parent_child_chunker.py  semantic_chunker.py  title_chunker.py
ability/operators/parsers/: __init__.py  base_parser.py  docx_parser.py  exceptions.py  html_parser.py  markdown_parser.py  mineru_parser.py  parser_factory.py  pdf_parser.py  pptx_parser.py  txt_parser.py
ability/operators/retrievers/: __init__.py  base_retriever.py  fulltext_retriever.py  hybrid_retriever.py  keyword_retriever.py  phrase_match_retriever.py  retriever_factory.py  semantic_retriever.py  text_match_retriever.py
ability/operators/storage/: __init__.py  base_storage.py  collection_operator.py  delete_operator.py  insert_operator.py  storage_factory.py  update_operator.py
ability/storage/: milvus_client.py
ability/utils/: filter_validation.py  hash.py  logger.py  text_processing.py
milvus_service/: __init__.py
milvus_service/service/: __init__.py  ability_descriptor.py  chunker_service.py  parser_service.py  registry_service.py  retriever_service.py  storage_service.py
